--- a/test.yml
+++ b/test.yml
@@ -3,18 +3,18 @@
   become: true
   vars:
     mariadb_bind_address: '0.0.0.0'
-    mariadb_root_password: drowssap
+    mariadb_root_password: 'BuIxB0ukAm'
     mariadb_databases:
       - name: myappdb
         init_script: /etc/ansible/roles/role_under_test/docker-tests/init.sql
       - name: myotherdb
     mariadb_users:
       - name: appusr
-        password: sekrit
+        password: 'tesiKy3lj@'
         priv: "myappdb.*:ALL,GRANT"
         host: "%"
       - name: otheruser
-        password: letmein
+        password: 'ir3.quTeg8'
         priv: "myotherdb.*:ALL"
   roles:
     - role_under_test
