add debug for root_pwd_check

--- a/tasks/root-password.yml
+++ b/tasks/root-password.yml
@@ -9,6 +9,8 @@
   failed_when: false
   register: root_pwd_check
   tags: mariadb
+  debug:
+    msg: root_pwd_check = { root_pwd_check }
 
 - name: Set MariaDB root password for the first time (root@localhost)
   mysql_user:
