--- a/tasks/root-password.yml
+++ b/tasks/root-password.yml
@@ -9,7 +9,8 @@
   failed_when: false
   register: root_pwd_check
   tags: mariadb
-  debug:
+
+- debug:
     msg: root_pwd_check = { root_pwd_check }
 
 - name: Set MariaDB root password for the first time (root@localhost)
