more curly brackets

--- a/tasks/root-password.yml
+++ b/tasks/root-password.yml
@@ -11,7 +11,7 @@
   tags: mariadb
 
 - debug:
-    msg: root_pwd_check = { root_pwd_check }
+    msg: root_pwd_check = {{ root_pwd_check }}
 
 - name: Set MariaDB root password for the first time (root@localhost)
   mysql_user:
