default for root_pwd_check

--- a/tasks/root-password.yml
+++ b/tasks/root-password.yml
@@ -1,6 +1,10 @@
 # roles/mariadb/tasks/root-password.yml
 ---
 
+- hosts: all
+  vars:
+    root_pwd_check: "Check mode default."
+
 # This command will fail when the root password was set previously
 - name: Check if root password is set
   shell: >
