--- a/tasks/root-password.yml
+++ b/tasks/root-password.yml
@@ -1,10 +1,6 @@
 # roles/mariadb/tasks/root-password.yml
 ---
 
-- hosts: all
-  vars:
-    root_pwd_check: "Check mode default."
-
 # This command will fail when the root password was set previously
 - name: Check if root password is set
   shell: >
@@ -15,7 +11,7 @@
   tags: mariadb
 
 - debug:
-    msg: root_pwd_check = {{ root_pwd_check }}
+    msg: root_pwd_check.rc = {{ root_pwd_check }}
 
 - name: Set MariaDB root password for the first time (root@localhost)
   mysql_user:
