--- a/tasks/root-password.yml
+++ b/tasks/root-password.yml
@@ -1,37 +1,36 @@
 # roles/mariadb/tasks/root-password.yml
 ---
 
-# This command will fail when the root password was set previously
-- name: Check if root password is set
-  shell: >
-    mysqladmin -u root status
-  changed_when: false
-  failed_when: false
-  register: root_pwd_check
-  tags: mariadb
+- block:
+  # This command will fail when the root password was set previously
+  - name: Check if root password is set
+    shell: >
+      mysqladmin -u root status
+    changed_when: false
+    failed_when: false
+    register: root_pwd_check
+    tags: mariadb
 
-- debug:
-    msg: root_pwd_check.rc = {{ root_pwd_check }}
+  - name: Set MariaDB root password for the first time (root@localhost)
+    mysql_user:
+      name: root
+      password: "{{ mariadb_root_password }}"
+      host: localhost
+      state: present
+    when: root_pwd_check.rc == 0
+    tags: mariadb
 
-- name: Set MariaDB root password for the first time (root@localhost)
-  mysql_user:
-    name: root
-    password: "{{ mariadb_root_password }}"
-    host: localhost
-    state: present
-  when: root_pwd_check.rc == 0
-  tags: mariadb
-
-- name: Set MariaDB root password for 127.0.0.1, ::1
-  mysql_user:
-    name: root
-    password: "{{ mariadb_root_password }}"
-    host: "{{ item }}"
-    login_user: root
-    login_password: "{{ mariadb_root_password }}"
-    state: present
-  with_items:
-    - ::1
-    - 127.0.0.1
-  when: root_pwd_check.rc == 0
-  tags: mariadb
+  - name: Set MariaDB root password for 127.0.0.1, ::1
+    mysql_user:
+      name: root
+      password: "{{ mariadb_root_password }}"
+      host: "{{ item }}"
+      login_user: root
+      login_password: "{{ mariadb_root_password }}"
+      state: present
+    with_items:
+      - ::1
+      - 127.0.0.1
+    when: root_pwd_check.rc == 0
+    tags: mariadb
+  when: not ansible_check_mode
